hphp/test/slow/reflection/ReflectionProperty_not_constructed.php.expectf
Fatal error: Internal error: Failed to retrieve the reflection object in %s/test/slow/reflection/ReflectionProperty_not_constructed.php on line 8
